examples/test/testpolicy10732.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10732
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key18: value6
      key17: value25
      key21: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value39
          key5: value31
      podSelector:
        matchLabels:
          key15: value8
